#-----------------------------------------------------------------------
# File: config/Makefile.am
# Package: (generic)
# Description:
#   + automake file for 'config' package-subdir
#
# Process this file with Automake to create Makefile.in.
#-----------------------------------------------------------------------

#-----------------------------------------------------------------------
# Variables: options
#-----------------------------------------------------------------------
AUTOMAKE_OPTIONS = foreign

#-----------------------------------------------------------------------
# Variables: cleanup
#-----------------------------------------------------------------------
CLEANFILES = *~

DISTCLEANFILES =

MAINTAINERCLEANFILES = \
	Makefile Makefile.in \
	config.guess \
	config.sub \
	depcomp \
	install-sh \
	ltmain.sh \
	missing \
	mkinstalldirs \
	texinfo.tex \
	ylwrap

#-----------------------------------------------------------------------
# Variables: distribution
#-----------------------------------------------------------------------
EXTRA_DIST = \
	Makefile.in \
	depcomp \
	install-sh \
	mkinstalldirs \
	missing \
	texinfo.tex

#	ltmain.sh \
#	config.guess \
#	config.sub \
